--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
   "name": "run.env",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Execute commands with .env file",
+  "keywords": [
+    "run",
+    "cmd",
+    "cli",
+    "shell",
+    "dotenv",
+    ".env",
+    "env",
+    ".env file",
+    "--env-file",
+    "environment",
+    "environment variables",
+    "environment variable",
+    "execute",
+    "exec",
+    "spawn"
+  ],
   "main": "lib/index.js",
   "bin": {
     "run.env": "./bin/run.env"
@@ -13,7 +30,7 @@
     ]
   },
   "eslintConfig": {
-    "extends": "./eslint/es6lint.json"
+    "extends": "airbnb/base"
   },
   "scripts": {
     "lint": "eslint src/**",
@@ -26,8 +43,16 @@
     "node": ">=6.1.0",
     "npm": ">=3.8.6"
   },
+  "homepage": "https://github.com/palanik/run.env",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/palanik/run.env.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "author": "N. Palani Kumanan",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^2.0.0"
   },
@@ -35,6 +60,8 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0",
-    "eslint": "^3.10.2"
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
