--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "run.env",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Execute commands with .env file",
   "keywords": [
     "run",
@@ -17,7 +17,8 @@
     "environment variable",
     "execute",
     "exec",
-    "spawn"
+    "spawn",
+    "spawnSync"
   ],
   "main": "lib/index.js",
   "bin": {
